Fixed area below msgbox being too light

--- a/parts/_dm.scss
+++ b/parts/_dm.scss
@@ -11,3 +11,11 @@
     background-color: transparent !important;
     border-radius: 0 !important;
 }
+
+.form-2fGMdU {
+    background-color: rgba(0,0,0,0.2) !important;
+    margin-top: 0 !important;
+    &:before {
+        background: none !important;
+    }
+}
